--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
                     <div class="img-grid-item" onclick="openModal('images/circuit_wiring.png', 'Circuit Wiring')">
                         <img src="images/circuit_wiring.png" alt="Circuit Wiring" loading="lazy">
                     </div>
-                    <div class="img-grid-item" onclick="openModal('images/breadboard.png', 'Breadboard')">
-                        <img src="images/breadboard.png" alt="Breadboard" loading="lazy">
-                    </div>
                     <div class="img-grid-item" onclick="openModal('images/fully_locked.jpg', 'Fully Locked')">
                         <img src="images/fully_locked.jpg" alt="Fully Locked" loading="lazy">
                     </div>
@@ -67,6 +64,9 @@
 
                 <h3>Prototype & Sketches</h3>
                 <div class="img-grid">
+                    <div class="img-grid-item" onclick="openModal('images/breadboard.png', 'Breadboarded Electronics')">
+                        <img src="images/breadboard.png" alt="Breadboarded Electronics" loading="lazy">
+                    </div>
                     <div class="img-grid-item" onclick="openModal('images/LCD_password.jpg', 'LCD Breadboarding')">
                         <img src="images/LCD_password.jpg" alt="LCD Breadboarding" loading="lazy">
                     </div>
