--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="description" content="Helix Vault - A three layer secure safe integrating biometric authentication, analog combination input, and PIN verification. Embedded Systems Final Project — ESE 5190 (Fall 2025)">
     <title>Helix Vault | Byte This - ESE 5190 Final Project</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
     <header>
