--- a/index.html
+++ b/index.html
@@ -4,27 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="description" content="Helix Vault - A three layer secure safe integrating biometric authentication, analog combination input, and PIN verification. Embedded Systems Final Project — ESE 5190 (Fall 2025)">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Helix Vault | Byte This - ESE 5190 Final Project">
+    <meta property="og:description" content="A three layer secure safe integrating biometric authentication, analog combination input, and PIN verification.">
+    <meta property="og:image" content="https://upenn-embedded.github.io/helix-vault/images/400x400.jpg">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="400">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Helix Vault | Byte This">
+    <meta name="twitter:description" content="A three layer secure safe with biometric authentication">
+    <meta name="twitter:image" content="https://upenn-embedded.github.io/helix-vault/images/400x400.jpg">
+
     <title>Helix Vault | Byte This - ESE 5190 Final Project</title>
     <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Helix Vault</h1>
-            <p class="subtitle">Embedded Systems Final Project — ESE 5190 (Fall 2025)</p>
-            <div class="team-info">
-                <strong>Team:</strong> Byte This (Team 16)<br>
-                <strong>Members:</strong> Yongwoo Park · Jeevan Karandikar · Tomas Ascoli
+        <div class="container header-grid">
+            <div class="header-left">
+                <h1>Helix Vault</h1>
+                <p class="subtitle">Embedded Systems Final Project — ESE 5190 (Fall 2025)</p>
+                <p class="team-name">Team Byte This (Team 16)</p>
+            </div>
+            <div class="header-center">
+                <a href="https://www.youtube.com/watch?v=f8Z03Lm1yS4" target="_blank" class="video-thumbnail-link">
+                    <img src="https://img.youtube.com/vi/f8Z03Lm1yS4/hqdefault.jpg" alt="Demo Video" class="video-thumbnail">
+                    <div class="play-button">▶</div>
+                </a>
+            </div>
+            <div class="header-right">
+                <div class="header-links">
+                    <div class="header-link-group">
+                        <span class="link-label">Team</span>
+                        <div class="link-items">
+                            <a href="mailto:yongwoo@seas.upenn.edu">Yongwoo Park</a>
+                            <a href="mailto:jeev@seas.upenn.edu">Jeevan Karandikar</a>
+                            <a href="mailto:tascoli@seas.upenn.edu">Tomas Ascoli</a>
+                        </div>
+                    </div>
+                    <div class="header-link-group">
+                        <span class="link-label">Links</span>
+                        <div class="link-items">
+                            <a href="https://github.com/upenn-embedded/helix-vault" target="_blank">
+                                <svg height="16" width="16" viewBox="0 0 16 16" fill="currentColor" style="display: inline-block; vertical-align: text-bottom; margin-right: 4px;">
+                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+                                </svg>
+                                Repository
+                            </a>
+                            <a href="https://github.com/mpagnoulle/R503-Fingerprint-Sensor-Library" target="_blank">R503 Library</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 
     <nav class="sticky-nav">
         <div class="nav-container">
-            <a href="#overview" class="nav-link">Overview</a>
-            <a href="#demo" class="nav-link">Demo</a>
-            <a href="#images" class="nav-link">Images</a>
-            <a href="#system" class="nav-link">System</a>
+            <a href="https://www.youtube.com/watch?v=f8Z03Lm1yS4" target="_blank" class="nav-link">Demo</a>
+            <a href="#overview" class="nav-link">System Overview</a>
+            <a href="#images" class="nav-link">Gallery</a>
             <a href="#requirements" class="nav-link">Requirements</a>
             <a href="#conclusion" class="nav-link">Conclusion</a>
         </div>
@@ -32,31 +75,34 @@
 
     <main>
         <section id="overview" class="hero-section">
-            <div class="container">
-                <img src="images/after_fingerprint.jpg" alt="Helix Vault - Fingerprint Stage" class="hero-image">
-                <p class="intro-text">
-                    A three layer secure safe integrating biometric authentication, analog combination input, and PIN verification. 
-                    Powered by two ATmega328PB microcontrollers and an ESP32 fingerprint module, Helix Vault blends embedded security logic, 
-                    mechanical actuation, and a guided LCD user interface.
-                </p>
-            </div>
-        </section>
-
-        <section id="demo">
-            <div class="container">
-                <h2>Demo Video</h2>
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/f8Z03Lm1yS4" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen></iframe>
+            <div class="container overview-grid">
+                <div class="overview-image">
+                    <img src="images/after_fingerprint.jpg" alt="Helix Vault - Fingerprint Stage" class="hero-image">
+                </div>
+                <div class="overview-text">
+                    <p class="intro-text">
+                        A three layer secure safe integrating biometric authentication, analog combination input, and PIN verification.
+                        Powered by two ATmega328PB microcontrollers and an ESP32 fingerprint module, Helix Vault blends embedded security logic,
+                        mechanical actuation, and a guided LCD user interface.
+                    </p>
+                    <h3>System Overview</h3>
+                    <p class="system-description">
+                        Helix Vault uses a sequential three layer unlock flow:
+                    </p>
+                    <ol class="system-flow">
+                        <li><strong>Fingerprint verification</strong> (ESP32 + R503 sensor)</li>
+                        <li><strong>Analog combination</strong> using potentiometers + switches (ADC readings)</li>
+                        <li><strong>PIN entry</strong> using a matrix keypad</li>
+                    </ol>
+                    <p class="system-description">
+                        A DC motor opens the sliding door after fingerprint recognition, revealing the analog combination and keypad stage.
+                    </p>
                 </div>
             </div>
         </section>
 
         <section id="images">
             <div class="container">
-                <h2>Final Product Images</h2>
-                
                 <h3>Device Overview</h3>
                 <div class="img-grid">
                     <div class="img-grid-item" onclick="openModal('images/after_fingerprint.jpg', 'Fingerprint Stage')">
@@ -88,29 +134,14 @@
                         <img src="images/TopPanelSketch.png" alt="Top Panel Sketch" loading="lazy">
                     </div>
                 </div>
-            </div>
-        </section>
 
-        <section id="system">
-            <div class="container">
-                <h2>System Overview</h2>
-                <p style="font-size: 0.95rem; margin-bottom: 16px; color: var(--text-secondary); font-weight: 300; max-width: 700px;">
-                    Helix Vault uses a sequential three layer unlock flow:
-                </p>
-                <ol style="font-size: 0.95rem; max-width: 700px; margin: 0 0 20px 0; font-weight: 300; padding-left: 25px;">
-                    <li style="margin-bottom: 8px;"><strong>Fingerprint verification</strong> (ESP32 + R503 sensor)</li>
-                    <li style="margin-bottom: 8px;"><strong>Analog combination</strong> using potentiometers + switches (ADC readings)</li>
-                    <li><strong>PIN entry</strong> using a matrix keypad</li>
-                </ol>
-                <p style="margin: 0 0 30px 0; color: var(--text-secondary); font-weight: 300; font-size: 0.95rem; max-width: 700px;">
-                    A DC motor opens the sliding door after fingerprint recognition, revealing the analog combination and keypad stage.
-                </p>
-                <div class="block-diagram" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 0;">
-                    <div>
-                        <img src="images/block_diagram.png" alt="System Block Diagram" onclick="openModal('images/block_diagram.png', 'System Block Diagram')" style="cursor: pointer; max-width: 100%; width: 100%; height: auto; border-radius: 8px; display: block;">
+                <h3>System Diagrams</h3>
+                <div class="img-grid-large">
+                    <div class="img-grid-item-large" onclick="openModal('images/block_diagram.png', 'System Block Diagram')">
+                        <img src="images/block_diagram.png" alt="System Block Diagram" loading="lazy">
                     </div>
-                    <div>
-                        <img src="images/circuit_diagram.png" alt="System Circuit Diagram" onclick="openModal('images/circuit_diagram.png', 'System Circuit Diagram')" style="cursor: pointer; max-width: 100%; width: 100%; height: auto; border-radius: 8px; display: block;">
+                    <div class="img-grid-item-large" onclick="openModal('images/circuit_diagram.png', 'System Circuit Diagram')">
+                        <img src="images/circuit_diagram.png" alt="System Circuit Diagram" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -118,11 +149,6 @@
 
         <section id="requirements" class="requirements-section">
             <div class="container">
-                <div class="section-header">
-                    <h2>Requirements Specification</h2>
-                    <p class="section-subtitle">Software and hardware requirements with validation results</p>
-                </div>
-
                 <div class="definitions-grid">
                     <div class="def-card">
                         <h3>Software Definitions</h3>
@@ -146,7 +172,9 @@
                     </div>
                 </div>
 
-                <div class="requirements-grid">
+                <div class="requirements-columns">
+                    <div class="requirements-column">
+                        <h3 class="column-header">Software Requirements Specification (SRS)</h3>
                     <div class="req-card">
                         <div class="req-number">SRS-01</div>
                         <h3>Low Power Management</h3>
@@ -201,7 +229,10 @@
                             <p>We modified this requirement, instead of having a built in interface that allows the user to change passwords and add fingerprints, this can be done using a computer and connecting to the ATMega's when the box is open and the lid protecting the electronics is taken off.</p>
                         </div>
                     </div>
+                    </div>
 
+                    <div class="requirements-column">
+                        <h3 class="column-header">Hardware Requirements Specification (HRS)</h3>
                     <div class="req-card">
                         <div class="req-number">HRS-01</div>
                         <h3>Microcontroller</h3>
@@ -267,17 +298,13 @@
                             <p>The keypad does not need a separate power source - instead GPIO pins are used to scan for keypad inputs. They GPIOs do not scan the keypad unless the correct switch and knob combination is detected.</p>
                         </div>
                     </div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section id="conclusion">
             <div class="container">
-                <h2>Conclusion</h2>
-                <p style="font-size: 0.95rem; margin-bottom: 24px; color: var(--text-secondary); font-weight: 300; max-width: 700px;">
-                    Helix Vault brought together firmware design, inter-MCU communication, mechanical actuation, and user interface development into a cohesive embedded system.
-                </p>
-                
                 <div class="conclusion-grid">
                     <div class="conclusion-card">
                         <h4>What Went Well</h4>
@@ -354,50 +381,16 @@
             </div>
         </section>
 
-        <section>
-            <div class="container">
-                <h2>References</h2>
-                <ul style="font-size: 1rem; font-weight: 300; padding-left: 25px; max-width: 700px;">
-                    <li>
-                        <a href="https://github.com/mpagnoulle/R503-Fingerprint-Sensor-Library" target="_blank">
-                            R503 Fingerprint Library
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </section>
     </main>
 
     <!-- Lightbox Modal -->
     <div id="imageModal" class="modal" onclick="closeModal()">
         <span class="modal-close" onclick="closeModal()">&times;</span>
         <div class="modal-content" onclick="event.stopPropagation()">
-            <img id="modalImage" src="" alt="">
             <div class="modal-caption" id="modalCaption"></div>
+            <img id="modalImage" src="" alt="">
         </div>
     </div>
-
-    <footer>
-        <div class="container">
-            <div class="team-section">
-                <h2>Team Information</h2>
-                <ul class="team-list">
-                    <li><strong>Team 16 — Byte This</strong></li>
-                    <li><a href="mailto:jeev@seas.upenn.edu">Jeevan Karandikar</a></li>
-                    <li><a href="mailto:yongwoo@seas.upenn.edu">Yongwoo Park</a></li>
-                    <li><a href="mailto:tascoli@seas.upenn.edu">Tomas Ascoli</a></li>
-                </ul>
-            </div>
-            <div class="repo-link">
-                <h2>Repository</h2>
-                <p>
-                    <a href="https://github.com/upenn-embedded/helix-vault" target="_blank">
-                        GitHub Repository
-                    </a>
-                </p>
-            </div>
-        </div>
-    </footer>
 
     <script>
         function openModal(imageSrc, caption) {
@@ -426,7 +419,7 @@
 
         // Active navigation highlighting
         const sections = document.querySelectorAll('section[id]');
-        const navLinks = document.querySelectorAll('.nav-link');
+        const navLinks = document.querySelectorAll('.nav-link[href^="#"]'); // Only select internal links
 
         function updateActiveNav() {
             let currentSection = '';
