--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:image" content="https://upenn-embedded.github.io/helix-vault/images/400x400.jpg">
 
     <title>Helix Vault | Byte This - ESE 5190 Final Project</title>
-    <link rel="stylesheet" href="styles.css?v=2">
+    <link rel="stylesheet" href="styles.css?v=3">
 </head>
 <body>
     <header>
@@ -77,7 +77,7 @@
         <section id="overview" class="hero-section">
             <div class="container overview-grid">
                 <div class="overview-image">
-                    <img src="images/after_fingerprint.jpg" alt="Helix Vault - Fingerprint Stage" class="hero-image">
+                    <img src="images/400x400.jpg" alt="Helix Vault" class="hero-image">
                 </div>
                 <div class="overview-text">
                     <p class="intro-text">
