website small edit

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </p>
                     <ol class="system-flow">
                         <li><strong>Fingerprint verification</strong> (ESP32 + R503 sensor)</li>
-                        <li><strong>Analog combination</strong> using potentiometers + switches (ADC readings)</li>
+                        <li><strong>Analog combination</strong> using potentiometers + switches</li>
                         <li><strong>PIN entry</strong> using a matrix keypad</li>
                     </ol>
                     <p class="system-description">
