changed links to linkedin

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <div class="header-link-group">
                         <span class="link-label">Team</span>
                         <div class="link-items">
-                            <a href="mailto:yongwoo@seas.upenn.edu">Yongwoo Park</a>
-                            <a href="mailto:jeev@seas.upenn.edu">Jeevan Karandikar</a>
-                            <a href="mailto:tascoli@seas.upenn.edu">Tomas Ascoli</a>
+                            <a href="https://www.linkedin.com/in/yongwoo-park-a0822b227/" target="_blank">Yongwoo Park</a>
+                            <a href="https://www.linkedin.com/in/jeevankarandikar/" target="_blank">Jeevan Karandikar</a>
+                            <a href="https://www.linkedin.com/in/tomas-ascoli-5a2229225/" target="_blank">Tomas Ascoli</a>
                         </div>
                     </div>
                     <div class="header-link-group">
